--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,20 +23,19 @@
   font-size: 16px;
 };
 
-.align-right{
-  text-align: right;
-  padding-right: 5px;
+.room-search{
+  padding: 5px;
+  .align-right{
+    margin: 5px 0;
+    text-align: right;
+    padding-right: 5px;
+  }
+  .align-left{
+    margin: 5px 0;
+    text-align: left;
+    padding-left: 5px;
+  }
 }
-
-.align-left{
-  text-align: left;
-  padding-left: 5px;
-}
-
-// .room-search{
-//   text-align: left;
-//   padding-left: 5px;
-// }
 
 .report-container {
   width: 95%;
