--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -32,61 +32,61 @@
                         renderer: BootstrapPagination::Rails %></div>
 <% end %>
 
-<div class="container room-search">
+<div class="container">
   <div class="col-md-9"></div>
-  <div class='col-md-3 well center'>
+  <div class='col-md-3 well center room-search'>
     <form action='/search/rooms' method='GET'>
       <div class='row'>
-        <div class='col-md-6 align-right'>
+        <div class='col-md-4 align-right'>
           name
         </div>
-        <div class='col-md-6 align-left'>
-          <input type='text' size= '8' name='name'/>
+        <div class='col-md-8 align-left'>
+          <input type='text' size= '10' name='name'/>
         </div>
       </div>
       <div class='row'>
-        <div class='col-md-6 align-right'>
+        <div class='col-md-4 align-right'>
           company
         </div>
-        <div class='col-md-6 align-left'>
-          <input type='text' size= '8' name='company_name'/>
+        <div class='col-md-8 align-left'>
+          <input type='text' size= '10' name='company_name'/>
         </div>
       </div>
       <div class='row'>
-        <div class='col-md-6 align-right'>
+        <div class='col-md-4 align-right'>
           location
         </div>
-        <div class='col-md-6 align-left'>
-          <input type='text' size= '8' name='location'/>
+        <div class='col-md-8 align-left'>
+          <input type='text' size= '10' name='location'/>
         </div>
       </div>
       <div class='row'>
-        <div class='col-md-6 align-right'>
+        <div class='col-md-4 align-right'>
           number
         </div>
-        <div class='col-md-6 align-left'>
+        <div class='col-md-8 align-left'>
           <input type='text' size= '3' name='room_number'/>
         </div>
       </div>
       <div class='row'>
-        <div class='col-md-6 align-right'>
+        <div class='col-md-4 align-right'>
           max occ >
         </div>
-        <div class='col-md-6 align-left'>
+        <div class='col-md-8 align-left'>
           <input type='text' size= '3' name='max_occupancy'/>
         </div>
       </div>
       <div class='row'>
-        <div class='col-md-6 align-right'>
-          <input type='checkbox' checked = 'checked' name='available' value='true' />
-        </div>
-        <div class='col-md-6 align-left'>
+        <div class='col-md-4 align-right'>
           available?
+        </div>
+        <div class='col-md-8 align-left'>
+          <input type='checkbox' checked = 'checked' name='available' value='true' />
         </div>
       </div>
       <div class='row'>
-        <div class='col-md-6'></div>
-        <div class='col-md-6 align-left'>
+        <div class='col-md-4'></div>
+        <div class='col-md-8 align-left'>
           <input type='submit' value='Search' class='btn btn-primary' />
       </div>
     </form>
