--- a/app/views/rooms/search.html.erb
+++ b/app/views/rooms/search.html.erb
@@ -86,7 +86,7 @@
       </div>
       <div class='row'>
         <div class='col-md-4 align-right'>
-          max occ >
+          max occ >=
         </div>
         <div class='col-md-8 align-left'>
           <input type='text' size= '3' name='max_occupancy'/>
